--- a/src/s2-homeworks/hw04/Stand.module.css
+++ b/src/s2-homeworks/hw04/Stand.module.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 60%;
+    margin: 0 auto;
 }
 
 .inputs {
