--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,16 +1,33 @@
 .button {
+    width: 200px;
+    height: 40px;
+    border: none;
+    outline: none;
+
+    color: white;
+    border-radius: 4px;
+    font-weight: 600;
+    font-size: 16px;
+    cursor: pointer;
+
 }
 
 .disabled {
+    opacity: 0.7;
+    cursor: default;
 }
 
 .secondary {
+    background: #0059b3;
 }
 
 .default {
+    background: lightskyblue;
 }
 
 .red {
+    background: red;
+    color: white;
 }
 
 .default:hover {
